tests/base/invalid/VarDecl_CompileFail_4.whiley
import whiley.lang.*:*

void System::main([string] args):
    x = y
    this.out.println(str(x))
